--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+client/node_modules/.cache/default-development/2.pack
+client/node_modules/.cache/default-development/5.pack
+client/node_modules/.cache/default-development/4.pack
+client/node_modules/.cache/default-development/0.pack
