--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/charts": "^1.4.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.7.3",
+    "antd": "^5.8.0",
+    "rc-pagination": "^3.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -37,5 +39,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "overrides": {
+    "@ant-design/charts": {
+      "antd": "^5.8.0",
+      "@ant-design/icons": "^5.8.0"
+    }
   }
 }
