--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -11,7 +11,9 @@
     "rc-pagination": "^3.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-form-stepper": "^2.0.3",
     "react-icons": "^4.10.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
