--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
+    "@ant-design/icons": "^5.2.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.8.0",
+    "antd": "^5.8.1",
     "rc-pagination": "^3.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -16,7 +17,8 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@babel/plugin-proposal-private-property-in-object" : "0.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
