--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
     "@ant-design/icons": "^5.2.4",
+    "@babel/plugin-proposal-private-property-in-object": "",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,12 +16,15 @@
     "rc-pagination": "^3.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-form-stepper": "^2.0.3",
     "react-icons": "^4.10.1",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "react-widgets": "^5.8.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
