--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.8.1",
     "axios": "^1.4.0",
     "formik": "^2.4.3",
+    "html-react-parser": "^4.2.1",
     "rc-pagination": "^3.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
