--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "formik": "^2.4.3",
+    "moment": "^2.29.4",
     "mongoose": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
