--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -6,14 +6,17 @@
     "@ant-design/charts": "^1.4.2",
     "@ant-design/icons": "^5.2.4",
     "@babel/plugin-proposal-private-property-in-object": "",
-    "@reduxjs/toolkit": "^1.9.5",
+    "@reduxjs/toolkit": "^1.9.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.8.1",
+    "antd": "^5.9.4",
+    "antv": "^0.2.2",
     "axios": "^1.4.0",
     "formik": "^2.4.3",
+    "gl-matrix": "^3.4.3",
     "html-react-parser": "^4.2.1",
+    "immer": "^10.0.3",
     "rc-pagination": "^3.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
