--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.4",
     "mongoose": "^7.2.0",
     "react": "^18.2.0",
+    "react-bootstrap-typeahead": "^6.2.3",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.5.2",
     "react-helmet": "^6.1.0",
